fix - FUCK OFF YOU HORIZONTAL SCROLLBAR

--- a/src/css/base/global.css
+++ b/src/css/base/global.css
@@ -6,5 +6,6 @@ body {
 
 main {
     height: 100vh;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
